--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>About me</title>
 </head>
 <body>
@@ -46,7 +46,7 @@
             <article>
                 <div class="text-box">
                 <h4>Just the highlights</h4>
-                <h3>Wall of Wonder</h3>
+                <h3>Hi</h3>
                 <p class="description-box">Description of the project. This should be fairly concise while also describing the key components
                     that
                     you developed or worked on. It can be as long as you need it to be but should at least be a few
@@ -60,8 +60,8 @@
                     <li>SVG</li>
                 </ul>
             </div>
-                <img src="https://assets.codepen.io/296057/fem-gettingstartedcss-ch5-1.png"
-                    alt="Screenshot of the Wall of Wonder." />
+                <img src="img/profile.png"
+                    alt="Hi, I am Eva Vargas" />
             </article>
             
         </section>
