first project updated

--- a/index.html
+++ b/index.html
@@ -54,23 +54,22 @@
             <h2>Projects I'm proud of</h2>
             <article>
                 <div class="text-box">
-                <h4>Latest Project</h4>
-                <h3>Wall of Wonder</h3>
-                <p class="description-box">Description of the project. This should be fairly concise while also describing the key components
-                    that
-                    you developed or worked on. It can be as long as you need it to be but should at least be a few
-                    sentences long. Be sure to include specific links anywhere in the description. A link looks like <a
-                        href="https://frontendmasters.github.io/grid-flexbox-v2/">this</a>, and multiple links look <a
-                        href="#">like this</a> and <a href="#">like this</a>.</p>
+                <h4>UML</h4>
+                <h3>Relationship Diagram Software</h3>
+                <p class="description-box">In this project I use some simple and powerfull technologies. ¡Try it! To see and test the app you can <a
+                        href="https://nice-bay-0f761f40f.azurestaticapps.net/" class="button-act">Click Here</a>, and for more information about these technologies you can read about <a
+                        href="https://d3js.org/" class="button-act">D3 JS</a> and <a href="https://v3.vuejs.org/guide/introduction.html#what-is-vue-js" class="button-act">VUE3 JS</a>.</p>
                 <h4>Technologies used include:</h4>
                 <ul>
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>SVG</li>
+                    <li>VUE3 JS</li>
+                    <li>D3 JS</li>
                 </ul>
             </div>
-                <img src="https://assets.codepen.io/296057/fem-gettingstartedcss-ch5-1.png"
-                    alt="Screenshot of the Wall of Wonder." />
+                <img src="img/proyect1.png"
+                    alt="Relationship Diagram Software" />
             </article>
             <article class="reverse">
                 <div class="text-box">
