dua lipa project added"

--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
     <section id="presentation">
         <p class="greeting">Hi, my name is <span>Eva Vargas</span></p>
         <h2>I develop the front end of websites and digital experiences.</h2>
-        <p>I'm a developer specializing in HTML, CSS, user experience, Vue js, JavaScript, etc.</p>
-        <p>Currently, I'm making a career in frontend. my <a href="htpps://github.com/evavargas">Github</a></p>
+        <p>I'm a developer specializing in Vue js, React js, JavaScript, HTML, CSS, user experience and more.</p>
+        <p>I'm particularly interested in web accessibility and mixed reality experiences.</p>
+        <p>Currently, I'm making a career in frontend. You can see <a href="htpps://github.com/evavargas">Github</a></p>
     </section>
     <div class="gradient-mn-bk-yw"></div>
     <div class="section-yellow">
@@ -55,8 +56,55 @@
             <article>
                 <div class="text-box">
                     <h4>UML</h4>
+                    <h3>Dua Lipa Shows and Products</h3>
+                    <p class="description-box">This project was developed as a team, with the participation of: <a
+                            href="https://github.com/LucaRM95">Luca Rojas Massey</a>, <a
+                            href="https://github.com/M-Gonzalo">Gonzalo Munóz</a>, <a
+                            href="https://github.com/maegop">Mario Gordon</a>, <a
+                            href="https://github.com/bryanscalzo97">Bryan Scalzo</a>, and Ian Fernandez. To
+                        see and test the app you can <a href="http://no-country-c03-g57-frontend.herokuapp.com/"
+                            class="button-act">Click Here</a>, and for more information about these technologies you can
+                        read about <a href="https://www.python.org/" class="button-act">Python</a> and <a
+                            href="https://reactjs.org/" class="button-act">React JS</a>.</p>
+                    <h4>Technologies used include:</h4>
+                    <ul>
+                        <li>REACT JS</li>
+                        <li>Django Rest Framwork</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Bootstrap</li>
+                    </ul>
+                </div>
+                <img src="img/project0.png" alt="Relationship Diagram Software." />
+            </article>
+            <article class="reverse">
+                <div class="text-box">
+                    <h4>Catalog</h4>
+                    <h3>Gatálogo</h3>
+                    <p class="description-box">This project was made for a tipical catalog, but as you can see, for now
+                        it is about cats. ¡Try it! To
+                        see and test the app you can <a href="https://witty-mud-0fbe69010.1.azurestaticapps.net/"
+                            class="button-act">Click Here</a>, and for more information about these technologies you can
+                        read about <a href="https://jquery.com/" class="button-act">JQuery</a> and <a
+                            href="https://coffeescript.org/" class="button-act">CoffeeScript</a>.</p>
+                    <h4>Technologies used include:</h4>
+                    <ul>
+                        <li>VUE3 JS</li>
+                        <li>JQuery</li>
+                        <li>CoffeeScript</li>
+                        <li>TypeScript</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                    </ul>
+                </div>
+                <img src="img/project2.png" alt="Gatálogo project." />
+            </article>
+            <article>
+                <div class="text-box">
+                    <h4>UML</h4>
                     <h3>Relationship Diagram Software</h3>
-                    <p class="description-box">In this project I use some simple and powerfull technologies. ¡Try it! To
+                    <p class="description-box">This application is only-client based, to solve a specific purpose. In
+                        this project I use some simple and powerfull technologies. ¡Try it! To
                         see and test the app you can <a href="https://nice-bay-0f761f40f.azurestaticapps.net/"
                             class="button-act">Click Here</a>, and for more information about these technologies you can
                         read about <a href="https://d3js.org/" class="button-act">D3 JS</a> and <a
@@ -64,37 +112,14 @@
                             JS</a>.</p>
                     <h4>Technologies used include:</h4>
                     <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>SVG</li>
                         <li>VUE3 JS</li>
                         <li>D3 JS</li>
+                        <li>SVG</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
                     </ul>
                 </div>
                 <img src="img/project1.png" alt="Relationship Diagram Software." />
-            </article>
-            <article class="reverse">
-                <div class="text-box">
-                    <h4>Catalog</h4>
-                    <h3>Gatálogo</h3>
-                    <p class="description-box">In this project I use some simple and powerfull technologies. ¡Try it! To
-                        see and test the app you can <a href="https://witty-mud-0fbe69010.1.azurestaticapps.net/"
-                            class="button-act">Click Here</a>, and for more information about these technologies you can
-                        read about <a href="https://jquery.com/" class="button-act">JQuery</a> and <a
-                            href="https://coffeescript.org/" class="button-act">CoffeeScript</a>.</p>
-                    <h4>Technologies used include:</h4>
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>VUE3 JS</li>
-                        <li>JQuery</li>
-                        <li>CoffeeScript</li>
-                        <li>TypeScript</li>
-
-
-                    </ul>
-                </div>
-                <img src="img/project2.png" alt="Gatálogo project." />
             </article>
         </section>
 
@@ -102,7 +127,7 @@
 
     <div class="gradient-mn-yw-rs"></div>
     <div class="section-rose">
-
+        <!-- -->
 
         <section id="contact">
 
