--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>About me</title>
 </head>
+
 <body>
     <nav>
         <ul>
@@ -45,25 +47,24 @@
             <h2>About me</h2>
             <article>
                 <div class="text-box">
-                <h4>Just the highlights</h4>
-                <h3>Hi</h3>
-                <p class="description-box">Description of the project. This should be fairly concise while also describing the key components
-                    that
-                    you developed or worked on. It can be as long as you need it to be but should at least be a few
-                    sentences long. Be sure to include specific links anywhere in the description. A link looks like <a
-                        href="https://frontendmasters.github.io/grid-flexbox-v2/">this</a>, and multiple links look <a
-                        href="#">like this</a> and <a href="#">like this</a>.</p>
-                <h4>My favs:</h4>
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>SVG</li>
-                </ul>
-            </div>
-                <img src="img/profile.png"
-                    alt="Hi, I am Eva Vargas" />
+                    <h4>Hi to everyone</h4>
+                    <h3>This is me, Eva</h3>
+                    <p class="description-box">It may be that I'm another frontend developer trying to keep your
+                        attention on me. Well, yes. I am interested in new technologies such as mixed reality, and
+                        others not as new as accessibility, and gamification. I like to understand how people interact
+                        with their devices and find the best way to help them and not overwhelm them. I hope you are
+                        well! And if I match your search, just contact me.I will be happy to meet you 😊.
+                    </p>
+                    <h4>My favs:</h4>
+                    <ul>
+                        <li>VUE JS</li>
+                        <li>REACT JS</li>
+                        <li>CSS</li>
+                    </ul>
+                </div>
+                <img src="img/profile.png" alt="Hi, I am Eva Vargas" />
             </article>
-            
+
         </section>
 
     </div>
@@ -126,4 +127,5 @@
         <p><small>&copy; 2022 Eva Vargas. All rights reserved.</small></p>
     </footer>
 </body>
+
 </html>
