catalina designs added

--- a/index.html
+++ b/index.html
@@ -119,7 +119,28 @@
                         <li>CSS</li>
                     </ul>
                 </div>
-                <img src="img/project1.png" alt="Relationship Diagram Software." />
+                <img src="img/project1.png" alt="Catalina Designs Website." />
+            </article>
+            <article class="reverse">
+                <div class="text-box">
+                    <h4>Landing Page</h4>
+                    <h3>Catalina Designs Website</h3>
+                    <p class="description-box">This project was done for a graphic designer, by the motivation to
+                        maximize the power of images and galleries. It was developed
+                        with pure CSS and pure Javascript. You can see it: <a
+                            href="https://evavargas.github.io/catalina-design/" class="button-act">Click Here</a>,
+                        and for more information about these technologies you can
+                        read about <a href="https://developer.mozilla.org/es/docs/Web/JavaScript/"
+                            class="button-act">Javascript</a> and <a
+                            href="https://developer.mozilla.org/es/docs/Web/CSS/" class="button-act">CSS</a>.</p>
+                    <h4>Technologies used include:</h4>
+                    <ul>
+                        <li>Javascript</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                    </ul>
+                </div>
+                <img src="img/project3.png" alt="Desginer project." />
             </article>
         </section>
 
