added calendar app

--- a/index.html
+++ b/index.html
@@ -53,9 +53,28 @@
     <div class="section-yellow">
         <section id="projects">
             <h2>Projects I'm proud of</h2>
+            <article class="reverse">
+                <div class="text-box">
+                    <h4>Calendar</h4>
+                    <h3>Personal Calendar</h3>
+                    <p class="description-box">This project is a calendar where you can add, edit or remove events. It will have access login and register accounts sonn! ¡Try it! To
+                        see and test the app you can <a href="https://icy-ground-0203bb610.1.azurestaticapps.net/"
+                            class="button-act">Click Here</a>, and for more information about these technologies you can
+                        read about <a href="https://firebase.google.com/?hl=es-419" class="button-act">Firebase</a> and <a
+                            href="https://vuex.vuejs.org/" class="button-act">Vuex</a>.</p>
+                    <h4>Technologies used include:</h4>
+                    <ul>
+                        <li>VUE2 JS</li>
+                        <li>Vuex</li>
+                        <li>Vuetify</li>
+                        <li>Firebase</li>
+                    </ul>
+                </div>
+                <img src="img/project4.png" alt="Calendar project." />
+            </article>
             <article>
                 <div class="text-box">
-                    <h4>UML</h4>
+                    <h4>Store</h4>
                     <h3>Dua Lipa Shows and Products</h3>
                     <p class="description-box">This project was developed as a team, with the participation of: <a
                             href="https://github.com/LucaRM95">Luca Rojas Massey</a>, <a
